2004-05-18  Cantona Su <paradisetux@hotmail.com>

	* em-format-html.c: Added header "X-Newsreader" for handle Outlook
	Express as Mailer.
	
2004-05-18  Not Zed  <NotZed@Ximian.com>

	* em-folder-browser.c (em_folder_browser_show_preview): don't
	nomarkseen when we restore the message when we show the preview.
	#58387.

	* mail-folder-cache.c (folder_changed): no new message test if its
	the drafts folder too.

	* mail-vfolder.c (vfolder_adduri_desc): use a nicer, account-based
	formatter for folder names.  Hmm, that was a good waste of time.
	For #55412.

	* em-folder-view.c (emfv_list_selection_change): Listen to the
	tree selection change event directly & proxy out, so we can update
	the status bar properly.  Blah.  For #58600.

	** Quick fix for #57434

	* em-format.c (emf_format_clone): fix the FIXME about cloning
	headers shown.

	* em-format-html.c (efh_format_headers): only show rupert if we're
	showing rupert.

	* em-format-html-print.c (efhp_init): default show_rupert to off.

	* em-format-html.c (efh_init): default show_rupert to on.

	* em-format-html.h: added show_rupert bit.

	* mail-folder-cache.c (folder_changed): don't emit new mail if its
	any vfolder, not just vtrash folder.  #56350.

	* em-folder-view.c (emfv_list_done_message_selected): run
	enable_menu's to make sure we're up to date.  #58352.

	** crappy hacks for #58385.

	* em-folder-selection-button.c
	(em_folder_selection_button_clicked): leave Ok button for this
	selection.

	* em-folder-selection.c (em_select_folder): added oklabel here too.

	* em-folder-selector.c (em_folder_selector_new)
	(em_folder_selector_construct, em_folder_selector_create_new):
	Added oklabel- text for ok label.
	(em_folder_selector_create_new): Set the ok label to Create.

	* em-message-browser.c (emmb_set_message): don't mark message seen
	if user has disabled auto-mark seen feature.  #58629.

	* em-format.c (em_format_part): if we have no content-type header,