@@ -1,3 +1,9 @@
+2004-05-19  Not Zed  <NotZed@Ximian.com>
+
+	* mail-component.c (mc_quit_sync): fixed up the empty trash on
+	exit thing, to update for all stores, not update the timestamp on
+	the first store synced.
+
 2004-05-18  Cantona Su <paradisetux@hotmail.com>
 
 	* em-format-html.c: Added header "X-Newsreader" for handle Outlook
